--- a/build-registro_c-Desktop_Qt_5_12_2_MinGW_64_bit-Debug/Makefile
+++ b/build-registro_c-Desktop_Qt_5_12_2_MinGW_64_bit-Debug/Makefile
@@ -208,6 +208,7 @@ Makefile: ../registro_c/registro_c.pro C:/Qt/5.12.2/mingw73_64/mkspecs/win32-g++
 		C:/Qt/5.12.2/mingw73_64/mkspecs/features/qt_config.prf \
 		C:/Qt/5.12.2/mingw73_64/mkspecs/win32-g++/qmake.conf \
 		C:/Qt/5.12.2/mingw73_64/mkspecs/features/spec_post.prf \
+		.qmake.stash \
 		C:/Qt/5.12.2/mingw73_64/mkspecs/features/exclusive_builds.prf \
 		C:/Qt/5.12.2/mingw73_64/mkspecs/features/toolchain.prf \
 		C:/Qt/5.12.2/mingw73_64/mkspecs/features/default_pre.prf \
@@ -372,6 +373,7 @@ C:/Qt/5.12.2/mingw73_64/mkspecs/features/qt_functions.prf:
 C:/Qt/5.12.2/mingw73_64/mkspecs/features/qt_config.prf:
 C:/Qt/5.12.2/mingw73_64/mkspecs/win32-g++/qmake.conf:
 C:/Qt/5.12.2/mingw73_64/mkspecs/features/spec_post.prf:
+.qmake.stash:
 C:/Qt/5.12.2/mingw73_64/mkspecs/features/exclusive_builds.prf:
 C:/Qt/5.12.2/mingw73_64/mkspecs/features/toolchain.prf:
 C:/Qt/5.12.2/mingw73_64/mkspecs/features/default_pre.prf:
